--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "bugs": "https://github.com/DAmarkday/node-auto-fit/issues",
   "bin":{
-    "auto-node-fit":"./index.cjs"
+    "node-auto-fit":"./index.cjs"
   },
   "license": "MIT"
 }
